OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Cancel_Consent__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Consent</label>
    <type>Checkbox</type>
</CustomField>