OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Care_Giver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Care_Giver_Phone__c</fullName>
    <inlineHelpText>The phone number for the caregiver/legal representative.</inlineHelpText>
    <label>Caregiver Phone Number</label>
    <type>Phone</type>
</CustomField>