OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Consent_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Consent_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Email Sent</label>
    <type>Checkbox</type>
</CustomField>