OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Consent_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Email_Sent_Date__c</fullName>
    <label>Consent Email Sent Date</label>
    <type>DateTime</type>
</CustomField>