OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Consent_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_End_Date__c</fullName>
    <formula>ADDMONTHS( Consent_Date__c ,12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent End Date</label>
    <type>Date</type>
</CustomField>