OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type__c</fullName>
    <label>Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Consent</fullName>
            </value>
            <value>
                <fullName>Re-Enrollment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>