OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Record</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consent</relationshipLabel>
    <relationshipName>Consent</relationshipName>
    <type>Lookup</type>
</CustomField>