OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/DocusignCheck__c.field-meta.xml
<CustomField>
    <fullName>DocusignCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DocusignCheck</label>
    <type>Checkbox</type>
</CustomField>