OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Legal_Representative_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Representative_Full_Name__c</fullName>
    <label>Legal Representative Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>