OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Legal_Representative_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Representative_Last_Name__c</fullName>
    <formula>Patient__r.Legal_Rep_Last_Name__c</formula>
    <label>Legal Representative Last Name</label>
    <type>Text</type>
</CustomField>