OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Legal_Representative_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Legal_Representative_Phone_Number__c</fullName>
    <formula>Patient__r.Legal_Rep_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Representative Phone Number</label>
    <type>Text</type>
</CustomField>