OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Legal_Representative_signing_on_behalf__c.field-meta.xml
<CustomField>
    <fullName>Legal_Representative_signing_on_behalf__c</fullName>
    <formula>If(TEXT(Patient__r.Legal_Rep_Condition_Check__c) ==&apos;true&apos;, &apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Representative signing on behalf</label>
    <type>Text</type>
</CustomField>