OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Paitent_Name__c.field-meta.xml
<CustomField>
    <fullName>Paitent_Name__c</fullName>
    <label>Paitent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>