OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Patient_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Patient_Date_Of_Birth__c</fullName>
    <formula>Patient__r.Birthdate</formula>
    <label>Patient Date Of Birth</label>
    <type>Date</type>
</CustomField>