OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Patient_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email_Address__c</fullName>
    <formula>Patient__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Email Address</label>
    <type>Text</type>
</CustomField>