OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Patient_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Patient_FirstName__c</fullName>
    <formula>Patient__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient First Name</label>
    <type>Text</type>
</CustomField>