OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Patient_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Full_Name__c</fullName>
    <label>Patient Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>