OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <description>Stores the external Patient ID sent from Covance</description>
    <externalId>true</externalId>
    <inlineHelpText>External Patient ID from Covance.</inlineHelpText>
    <label>Patient ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>