OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/POA_Required__c.field-meta.xml
<CustomField>
    <fullName>POA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POA Required</label>
    <type>Checkbox</type>
</CustomField>