OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>Select the product that you are submitting your application for</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABILIFY MAINTENA</fullName>
            </value>
            <value>
                <fullName>JYNARQUE</fullName>
            </value>
            <value>
                <fullName>REXULTI</fullName>
            </value>
            <value>
                <fullName>SAMSCA</fullName>
            </value>
            <value>
                <fullName>ABILIFY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>