OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescriber</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consent (Provider)</relationshipLabel>
    <relationshipName>Consent2</relationshipName>
    <type>Lookup</type>
</CustomField>