OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Provider_External_Id_c__c.field-meta.xml
<CustomField>
    <fullName>Provider_External_Id_c__c</fullName>
    <label>Provider_External_Id__c</label>
    <length>30</length>
    <type>Text</type>
</CustomField>