OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/Verify_Patient_DOB__c.field-meta.xml
<CustomField>
    <fullName>Verify_Patient_DOB__c</fullName>
    <label>Patient Date of Birth</label>
    <type>Date</type>
</CustomField>