OpafProjectVfMods/force-app/main/default/objects/Consent__c/fields/What_is_your_relationship__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_relationship__c</fullName>
    <label>What is your relationship:</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_am_providing_consent_for__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Other Caregiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>