OpafProjectVfMods/force-app/main/default/objects/Consent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Consent_Id_c__c</columns>
    <columns>Patient__c</columns>
    <columns>Patient_External_Id_c__c</columns>
    <columns>Legal_Representative_Full_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>